fix: alignemnt and responsive view

--- a/editor-components/breadcrumb/breadcrumb1/breadcrumb1.module.scss
+++ b/editor-components/breadcrumb/breadcrumb1/breadcrumb1.module.scss
@@ -129,3 +129,9 @@
     }
   }
 }
+
+@container (max-width: #{$composer-phone-width}) {
+  .container {
+    min-height: 300px;
+  }
+}
