--- a/editor-components/breadcrumb/breadcrumb2/breadcrumb2.module.scss
+++ b/editor-components/breadcrumb/breadcrumb2/breadcrumb2.module.scss
@@ -1,3 +1,5 @@
+@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
+
 .container {
   display: flex;
   flex-direction: column;
@@ -33,6 +35,7 @@
     height: 100%;
     position: relative;
     z-index: 2;
+    align-items: baseline;
 
     .crumber-content {
       display: flex;
@@ -83,5 +86,20 @@
     content: "";
     position: relative;
     z-index: 3;
+    text-align: left !important;
+  }
+}
+
+@container (max-width: #{$composer-tablet-width}) {
+  .container {
+    min-height: 300px;
+    gap: var(--composer-gap-md);
+  }
+}
+
+
+@container (max-width: #{$composer-phone-width}) {
+  .container {
+    min-height: 250px;
   }
 }
